docs: add comments & adjust swagger spec
