# docs/swagger.json
@@ -14,6 +14,128 @@
   "host": "localhost:8080",
   "basePath": "/",
   "paths": {
+    "/articles": {
+      "get": {
+        "description": "Validates `page` and `limit` params and returns list of articles for specified user by his `username`.\nNew articles are in the start and old ones are in the end of list.",
+        "tags": [
+          "articles"
+        ],
+        "summary": "get list of articles for specified user",
+        "operationId": "articles_for_user",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Username",
+            "description": "username of owner of articles",
+            "name": "username",
+            "in": "query"
+          },
+          {
+            "minimum": 0,
+            "type": "integer",
+            "format": "int64",
+            "default": 0,
+            "x-go-name": "Page",
+            "description": "number of page in pagination",
+            "name": "page",
+            "in": "query"
+          },
+          {
+            "maximum": 50,
+            "minimum": 0,
+            "type": "integer",
+            "format": "int64",
+            "default": 10,
+            "x-go-name": "Limit",
+            "description": "maximal number of fetched articles",
+            "name": "limit",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/articlesForUserResp200"
+          },
+          "400": {
+            "$ref": "#/responses/articlesForUserResp400"
+          },
+          "500": {
+            "$ref": "#/responses/commonError"
+          }
+        }
+      },
+      "post": {
+        "description": "Checks user with provided `user_oid` and `password` exists and validates article data.\nThen saves and returns created item.",
+        "tags": [
+          "articles"
+        ],
+        "summary": "creates new article",
+        "operationId": "create_article",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "UserOId",
+            "description": "unique user identifier",
+            "name": "user_oid",
+            "in": "header",
+            "required": true
+          },
+          {
+            "x-go-name": "Body",
+            "description": "user password and article payload",
+            "name": "payload",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "theme",
+                "password"
+              ],
+              "properties": {
+                "password": {
+                  "description": "user password",
+                  "type": "string",
+                  "x-go-name": "Password"
+                },
+                "tags": {
+                  "description": "topics of article",
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  },
+                  "x-go-name": "Tags"
+                },
+                "text": {
+                  "description": "content of article",
+                  "type": "string",
+                  "x-go-name": "Text"
+                },
+                "theme": {
+                  "description": "theme of article",
+                  "type": "string",
+                  "x-go-name": "Theme"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "$ref": "#/responses/createArticleResp201"
+          },
+          "400": {
+            "$ref": "#/responses/createArticleResp400"
+          },
+          "401": {
+            "$ref": "#/responses/createArticleResp401"
+          },
+          "500": {
+            "$ref": "#/responses/commonError"
+          }
+        }
+      }
+    },
     "/authorize": {
       "get": {
         "description": "Checks whether user with such username exists and compares his password with given one.",
@@ -70,7 +192,7 @@
             "$ref": "#/responses/registerResp201"
           },
           "409": {
-            "$ref": "#/responses/commonError"
+            "$ref": "#/responses/registerResp409"
           },
           "500": {
             "$ref": "#/responses/commonError"
@@ -80,6 +202,55 @@
     }
   },
   "definitions": {
+    "Article": {
+      "type": "object",
+      "properties": {
+        "created_at": {
+          "description": "time of creation",
+          "type": "string",
+          "format": "date-time",
+          "x-go-name": "CreatedAt"
+        },
+        "id": {
+          "description": "identifier of article",
+          "type": "string",
+          "x-go-name": "OId"
+        },
+        "status": {
+          "$ref": "#/definitions/ArticleStatus"
+        },
+        "tags": {
+          "description": "tags related for article",
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "Tags"
+        },
+        "text": {
+          "description": "content of article",
+          "type": "string",
+          "x-go-name": "Text"
+        },
+        "theme": {
+          "description": "theme/topic of article",
+          "type": "string",
+          "x-go-name": "Theme"
+        },
+        "updated_at": {
+          "description": "time when was updated",
+          "type": "string",
+          "format": "date-time",
+          "x-go-name": "UpdatedAt"
+        }
+      },
+      "x-go-package": "user-management/internal/domain"
+    },
+    "ArticleStatus": {
+      "type": "integer",
+      "format": "uint8",
+      "x-go-package": "user-management/internal/domain"
+    },
     "ErrorBody": {
       "description": "error entity",
       "type": "object",
@@ -94,6 +265,27 @@
         }
       },
       "x-go-package": "user-management/internal/controllers"
+    },
+    "PaginationData": {
+      "type": "object",
+      "properties": {
+        "count": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Count"
+        },
+        "limit": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Limit"
+        },
+        "page": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Page"
+        }
+      },
+      "x-go-package": "user-management/internal/models"
     },
     "User": {
       "description": "user credentials",
@@ -118,6 +310,22 @@
       },
       "x-go-package": "user-management/internal/domain"
     },
+    "articles": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Article"
+          },
+          "x-go-name": "Data"
+        },
+        "pagination": {
+          "$ref": "#/definitions/PaginationData"
+        }
+      },
+      "x-go-package": "user-management/internal/controllers/article"
+    },
     "authResult": {
       "description": "access token and user id",
       "type": "object",
@@ -141,6 +349,18 @@
     }
   },
   "responses": {
+    "articlesForUserResp200": {
+      "description": "success",
+      "schema": {
+        "$ref": "#/definitions/articles"
+      }
+    },
+    "articlesForUserResp400": {
+      "description": "invalid prameters provided",
+      "schema": {
+        "$ref": "#/definitions/ErrorBody"
+      }
+    },
     "authResp200": {
       "description": "successfully authorized",
       "schema": {
@@ -155,6 +375,24 @@
     },
     "commonError": {
       "description": "internal server error",
+      "schema": {
+        "$ref": "#/definitions/ErrorBody"
+      }
+    },
+    "createArticleResp201": {
+      "description": "successfully created",
+      "schema": {
+        "$ref": "#/definitions/Article"
+      }
+    },
+    "createArticleResp400": {
+      "description": "invalid article data provided",
+      "schema": {
+        "$ref": "#/definitions/ErrorBody"
+      }
+    },
+    "createArticleResp401": {
+      "description": "user_oid or password is invalid",
       "schema": {
         "$ref": "#/definitions/ErrorBody"
       }
