# internal/controllers/article/getForUser.get.go
@@ -9,12 +9,40 @@ import (
 	"user-management/internal/models"
 )
 
-// swagger: model
+const DefaultPage = 0
+const DefaultLimit = 10
+
+// swagger:model
 type articles struct {
 	Data           []domain.Article      `json:"data"`
 	PaginationData models.PaginationData `json:"pagination"`
 }
 
+// swagger:parameters articles_for_user
+// nolint:unused
+type articlesForUserParams struct {
+	// username of owner of articles
+	// in: query
+	// type: string
+	Username string `json:"username"`
+	// number of page in pagination
+	// in: query
+	// type: "integer"
+	// format: "int32"
+	// minimum: 0
+	// default: 0
+	Page int `json:"page"`
+	// maximal number of fetched articles
+	// in: query
+	// type: "integer"
+	// format: "int32"
+	// minimum: 0
+	// maximum: 50
+	// default: 10
+	Limit int `json:"limit"`
+}
+
+// success
 // swagger:response articlesForUserResp200
 // nolint:unused
 type articlesForUserResp200 struct {
@@ -22,9 +50,25 @@ type articlesForUserResp200 struct {
 	body articles
 }
 
-const DefaultPage = 0
-const DefaultLimit = 10
+// invalid prameters provided
+// swagger:response articlesForUserResp400
+// nolint:unused
+type articlesForUserResp400 struct {
+	// in: body
+	body controllers.ErrorBody
+}
 
+// swagger:route GET /articles articles articles_for_user
+// get list of articles for specified user
+// ---
+// Validates `page` and `limit` params and returns list of articles for specified user by his `username`.
+// New articles are in the start and old ones are in the end of list.
+//
+// responses:
+//
+//	200: articlesForUserResp200
+//	400: articlesForUserResp400
+//	500: commonError
 func (a Article) GetForUser(ctx controllers.Context) error {
 	username, pageStr, limitStr := ctx.QueryParams().Get("username"), ctx.QueryParams().Get("page"), ctx.QueryParams().Get("limit")
 	if len(pageStr) == 0 {
@@ -46,7 +90,7 @@ func (a Article) GetForUser(ctx controllers.Context) error {
 
 	articlesData, paginationData, err := a.articleModel.GetForUser(username, page, limit)
 	if err != nil {
-		e := ctx.JSON(http.StatusBadRequest, controllers.ErrorBody{Error: "failed to get list of articles for user"})
+		e := ctx.JSON(http.StatusInternalServerError, controllers.ErrorBody{Error: "failed to get list of articles for user"})
 		return fmt.Errorf("%w: %w", e, err)
 	}
 
